--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,3 +15,12 @@ body{
   margin: 0;
   padding: 0;
 }
+
+/* this is for index page */
+.grid{
+  display: grid;
+  grid-template-columns: repeat(8,1fr);
+  grid-template-rows: repeat(20,minmax(150px,auto));
+  
+}
+
