--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,3 +15,24 @@ body{
   margin: 0;
   padding: 0;
 }
+
+/*Styling the sidebar*/
+.sidebar{
+  width: 16vw;
+  height: 100vh;
+  background-color: #000000;
+  position: fixed;
+  top: 12vh;
+  left: 0;
+  padding: 20px;
+  color: white;
+  font-size: 24px;
+}
+
+.sidebar a{
+  color: white;
+}
+
+.about {
+
+}
