--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -14,6 +14,9 @@
 body{
   margin: 0;
   padding: 0;
+  background-image: url(../images/backgroundaboutpage.jpg);
+  background-repeat: no-repeat;
+  background-size:cover;
 }
 
 
