--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,7 @@
 /* Fonts */
-
+font-family: 'BebasNeue-Regular';
+  src: url('/fonts/BebasNeue-Regular.woff') format('woff'),
+  url('/fonts/BebasNeue-Regular.woff2') format('woff2');
 /* Root */
 :root{
   --black: #000
