--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -33,8 +33,9 @@ h1 {
 body{
   margin: 0;
   padding: 0;
-  background-image: url(../images/backgroundaboutpage.jpg);/*this is the link to the backgroud image */
+  background:rgba(0,0,0,0.7) url(../images/backgroundaboutpage.jpg);/*this is the link to the backgroud image */
   background-size:cover;/*this makes the background image cover the whole page */ 
+  background-blend-mode: darken;
 }
 
 
