--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,18 +1,13 @@
 /* Fonts */
 @font-face {
   font-family: 'pricedow';
-  src: 
-       local(‘pricedow’),
-       url('pricedow.woff2') format('woff2'),
-       url('pricedow.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
+  src: url('../fonts/pricedow.woff2') format('woff2'),
+  url('../fonts/pricedow.woff') format('woff');
 }
 
 /* Root */
 :root{
-  --black: #000
+  --PriceDow: "pricedow";
 }
 
 /* general styling */
@@ -26,24 +21,91 @@ body{
   padding: 0;
 }
 
+.bg{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.bg-index{
+  background: url('../images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  z-index: -2;
+}
+
+.darken{
+  background-color: rgb(0, 0, 0, 0.25);
+  z-index: -1;
+}
+
+
+
 header{
   text-align: center;
-  background: rgb(26, 26, 31);
+  background: linear-gradient(#000 40%, rgb(0,0,0,0.0));
   top: 0;
   left: 0;
   max-width: 100vw;
-  height: 5vh;
+  height: 18vh;
 }
+
+#headerimage{
+  /* font-family: ; */
+  /* font-size: 2vh;
+  color: #fff;
+  margin: 0 auto;
+  font-family: var(--PriceDow); */
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  max-width: 50vw;
+  margin-top: 1vw;
+  margin-right: 7vw;
+}
+
+#headerlogo{
+  margin-left: 0;
+  top: 0;
+  left: 0;
+  max-width: 6vw;
+  float: left;
+  margin-left: 20px;
+  
+}
+
+.buttonlogo{
+  background-color: #00000000;
+  opacity: 10;
+}
+
+#headerlogo1{
+  margin-left: 0;
+  top: 0;
+  left: 0;
+  max-width: 6vw;
+  width: 100%;
+  /* float: left;
+  margin-left: 20px; */
+  
+}
+
+
+
+
 
 /* this is for search bar */
 .searchwrap{
-  margin-top: 7vh;
+  margin-top: -5vh;
   max-width: 100vw; 
 }
 
 .search{
   display: flex;
-  width: 30%;
+  width: 40%;
   margin: 0 auto;
   /* position: relative; */
 }
@@ -73,12 +135,165 @@ header{
   font-size: 20px;
 }
 
+/* this is for box welcoming user */
+
+.boxarticle{
+    margin: 0 auto;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    /* background-color: #2e2d2dbf; */
+    background: rgba(0, 0, 0, 0.5);
+    border: 1px solid black;
+    padding: 5vh;
+    width: 40vw;
+    border-radius: 20px;
+  
+}
+
+#welcometoptext{
+  font-size: 40px;
+  text-align: center;
+  margin-top: -20px;
+  color: #FFA500;
+}
+
+#welcomemiddletext{
+  font-size: 20px;
+  text-align: center;
+  margin-top: -10px;
+  color: #FFA500;
+}
+
+#welcomebottomtext{
+ font-size: 20px;
+ text-align: center;
+ color: #FFA500;
+}
+
 
 /* this is for index page */
 .grid{
   display: grid;
-  grid-template-columns: repeat(8,1fr);
-  grid-template-rows: repeat(10,minmax(150px,auto));
-  
+  grid-template-columns: repeat(10,1fr);
+  grid-template-rows: repeat(5,minmax(150px,auto));
 }
+
+.textingrid{
+  text-align: center;
+}
+
+#mostpopulargrid{
+  grid-column: 2/4;
+  grid-row: 1/2;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+
+}
+
+#fpsgrid{
+  grid-column: 5/7;
+  grid-row: 1/2;
+  background-color: #1d1c1c6e;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#rpggrid{
+  grid-column: 8/10;
+  grid-row: 1/2;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#sportgrid{
+  grid-column: 2/4;
+  grid-row: 2/3;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#platformergrid{
+  grid-column: 5/7;
+  grid-row: 2/3;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#horrorgrid{
+  grid-column: 8/10;
+  grid-row: 2/3;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#racinggrid{
+  grid-column: 2/4;
+  grid-row: 3/4;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#adventuregrid{
+  grid-column: 5/7;
+  grid-row: 3/4;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#fightinggrid{
+  grid-column: 8/10;
+  grid-row: 3/4;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#puzzlegrid{
+  grid-column: 2/4;
+  grid-row: 4/5;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#strategygrid{
+  grid-column: 5/7;
+  grid-row: 4/5;
+  background-color: #e56262;
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+#actiongrid{
+  grid-column: 8/10;
+  grid-row: 4/5;
+  background-color: #e56262;padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+footer{
+  background: #000;
+}
+
+
+
 
