--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -21,6 +21,10 @@ body{
   padding: 0;
 }
 
+.flex{
+  display: flex;
+}
+
 .bg{
   position: fixed;
   top: 0;
@@ -175,7 +179,7 @@ header{
 .grid{
   display: grid;
   grid-template-columns: repeat(10,1fr);
-  grid-template-rows: repeat(5,minmax(150px,auto));
+  grid-template-rows: repeat(4,minmax(150px,auto));
 }
 
 .textingrid{
@@ -290,9 +294,32 @@ header{
   border-radius: 20px;
 }
 
+
+
 footer{
+  /* position: relative;
+  top: 0px; */
+  justify-content: space-between;
+  align-items: center;
   background: #000;
+  max-width: 100vw;
+  height: 10vh;
 }
+
+footer a{
+  position: relative;
+  top: -5px;
+}
+
+footer a img{
+  position: relative;
+  top: 7px;
+  height: 8vh;
+  padding: 1vh;
+  background-color: #FFA500;
+}
+
+
 
 
 
