--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,10 +24,19 @@
   list-style: none;
 }
 
+.flex{
+  display: flex;
+}
+
 /*General body settings*/
 body{
   margin: 0;
   padding: 0;
+}
+
+/*Position the main content of the page*/
+.body {
+  margin: 18vh 0 0 15vw;
 }
 
 /* this is to have a background picture and darken it */
@@ -119,7 +128,9 @@ aside a:hover {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 16vh 0vw;
+  position: fixed;
+  top: 16vh;
+  right: 0;
 }
 
 /*White square text-input styling*/
@@ -140,26 +151,19 @@ aside a:hover {
   cursor: pointer;
 }
 
-.box-container {
-  display: flex;
+main.flex{
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  padding: 0 0 0 4vw;
 }
 
 .box {
   height: 45vh;
-  width: 21vw;
-  background-color: #F8941C;
+  width: 20vw;
+  background-color: rgb(0, 0, 0, 0.75);
   border: 1px solid #000000;
   border-radius: 10px;
-  margin-bottom: 35vh;
-  margin-left: 3vw;
-  margin-right: 3vw;
-  margin-top: -30vh;
+  margin: 5vh 1vw;
 }
 
 
-/*Position the main content of the page*/
-.body {
-  margin: 18vh 0 0 15vw;
-}
