--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -54,6 +54,14 @@ body{
   height: 100vh;
 }
 
+.bg-index{
+  background: url('../images/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  z-index: -2;
+}
+
 .bg-GAME{
   background: url("../images/bg-GAME.jpg");
   background-repeat: no-repeat;
@@ -67,6 +75,47 @@ body{
   z-index: -1;
 }
 
+/* HEADER */
+header{
+  text-align: center;
+  background: linear-gradient(#000 40%, rgb(0,0,0,0.0));
+  top: 0;
+  left: 0;
+  max-width: 100vw;
+  height: 18vh;
+}
+
+#headerimage{
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  max-width: 50vw;
+  margin-top: 1vw;
+  margin-right: 7vw;
+}
+
+#headerlogo{
+  margin-left: 0;
+  top: 0;
+  left: 0;
+  max-width: 6vw;
+  float: left;
+  margin-left: 20px;
+  
+}
+
+.buttonlogo{
+  background-color: #00000000;
+  opacity: 10;
+}
+
+#headerlogo1{
+  margin-left: 0;
+  top: 0;
+  left: 0;
+  max-width: 6vw;
+  width: 100%;
+}
 
 /*Styling the sidebar*/
 aside{
@@ -148,146 +197,7 @@ aside a:hover {
   cursor: pointer;
 }
 
-/* Main body */
-main img.hero{
-  width: 100%;
-}
-
-/* Navigation underneath the hero */
-main nav{
-  width: 100%;
-  background-color: black;
-  position: relative;
-  top: -4px;
-  font-family: var(--InriaSans);
-}
-
-main nav ul{
-  margin: 0;
-  padding: 0;
-}
-
-main nav ul li{
-  padding: 1vh 3vw;
-}
-
-main nav ul li a{
-  color: white;
-  padding: 1vh 3vw;
-}
-
-nav ul li.selected{
-  background-color: orange;
-}
-
-/* Tutorials */
-main article{
-  width: 90%;
-  margin: 3vh auto;
-  padding: 10px;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.75);
-  border-radius: 10px;
-}
-
-main article img{
-  width: 200px;
-  padding-right: 1vw;
-}
-
-main article h2{
-  font-size: 2rem
-}
-
-main article h6{
-  font-size: 1rem
-}
-
-main article p{
-  margin: 10px 0 0 0 ;
-  font-size: 1.7em;
-}
-
-.flex{
-  display: flex;
-}
-
-.bg{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-}
-
-.bg-index{
-  background: url('../images/background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  z-index: -2;
-}
-
-.darken{
-  background-color: rgb(0, 0, 0, 0.25);
-  z-index: -1;
-}
-
-
-
-header{
-  text-align: center;
-  background: linear-gradient(#000 40%, rgb(0,0,0,0.0));
-  top: 0;
-  left: 0;
-  max-width: 100vw;
-  height: 18vh;
-}
-
-#headerimage{
-  /* font-family: ; */
-  /* font-size: 2vh;
-  color: #fff;
-  margin: 0 auto;
-  font-family: var(--PriceDow); */
-  margin: 0 auto;
-  top: 0;
-  left: 0;
-  max-width: 50vw;
-  margin-top: 1vw;
-  margin-right: 7vw;
-}
-
-#headerlogo{
-  margin-left: 0;
-  top: 0;
-  left: 0;
-  max-width: 6vw;
-  float: left;
-  margin-left: 20px;
-  
-}
-
-.buttonlogo{
-  background-color: #00000000;
-  opacity: 10;
-}
-
-#headerlogo1{
-  margin-left: 0;
-  top: 0;
-  left: 0;
-  max-width: 6vw;
-  width: 100%;
-  /* float: left;
-  margin-left: 20px; */
-  
-}
-
-
-
-
-
+/* MAIN BODY INDEX PAGE */
 /* this is for search bar */
 .searchwrap{
   margin-top: -5vh;
@@ -481,8 +391,67 @@ header{
   border-radius: 20px;
 }
 
+/* MAIN BODY CHOOSING TUTORIAL PAGE */
+main img.hero{
+  width: 100%;
+}
 
+/* Navigation underneath the hero */
+main nav{
+  width: 100%;
+  background-color: black;
+  position: relative;
+  top: -4px;
+  font-family: var(--InriaSans);
+}
 
+main nav ul{
+  margin: 0;
+  padding: 0;
+}
+
+main nav ul li{
+  padding: 1vh 3vw;
+}
+
+main nav ul li a{
+  color: white;
+  padding: 1vh 3vw;
+}
+
+nav ul li.selected{
+  background-color: orange;
+}
+
+/* Tutorials */
+main article{
+  width: 90%;
+  margin: 3vh auto;
+  padding: 10px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 10px;
+}
+
+main article img{
+  width: 200px;
+  padding-right: 1vw;
+}
+
+main article h2{
+  font-size: 2rem
+}
+
+main article h6{
+  font-size: 1rem
+}
+
+main article p{
+  margin: 10px 0 0 0 ;
+  font-size: 1.7em;
+}
+
+/* FOOTER */
 footer{
   /* position: relative;
   top: 0px; */
@@ -505,9 +474,3 @@ footer a img{
   padding: 1vh;
   background-color: #FFA500;
 }
-
-
-
-
-
-
