--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -77,11 +77,12 @@ body{
 
 /* HEADER */
 header{
+  position: fixed;
   text-align: center;
-  background: linear-gradient(#000 40%, rgb(0,0,0,0.0));
+  background: linear-gradient(#000 70%, rgb(0,0,0,0.0));
   top: 0;
   left: 0;
-  max-width: 100vw;
+  width: 100vw;
   height: 18vh;
 }
 
@@ -131,6 +132,7 @@ aside{
   font-family: var(--Inriasans);
   line-height: 5vh;
   background: linear-gradient(to right, rgba(0, 0, 0) 65%, rgb(0, 0, 0, 0.0));
+  z-index: -1;
 }
 
 /*Moving the list to the left*/
@@ -286,109 +288,70 @@ aside a:hover {
 #mostpopulargrid{
   grid-column: 2/4;
   grid-row: 1/2;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
-
 }
 
 #fpsgrid{
   grid-column: 5/7;
   grid-row: 1/2;
-  background-color: #1d1c1c6e;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #rpggrid{
   grid-column: 8/10;
   grid-row: 1/2;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #sportgrid{
   grid-column: 2/4;
   grid-row: 2/3;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #platformergrid{
   grid-column: 5/7;
   grid-row: 2/3;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #horrorgrid{
   grid-column: 8/10;
   grid-row: 2/3;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #racinggrid{
   grid-column: 2/4;
   grid-row: 3/4;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #adventuregrid{
   grid-column: 5/7;
   grid-row: 3/4;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #fightinggrid{
   grid-column: 8/10;
   grid-row: 3/4;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #puzzlegrid{
   grid-column: 2/4;
   grid-row: 4/5;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #strategygrid{
   grid-column: 5/7;
   grid-row: 4/5;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
 }
 
 #actiongrid{
   grid-column: 8/10;
   grid-row: 4/5;
-  background-color: #e56262;padding: 20px;
+
+}
+
+section.grid a{
+  background-color: #e56262;
+  padding: 20px;
   margin-bottom: 40px;
   border-radius: 20px;
+  color: #fff;
 }
 
 /* MAIN BODY CHOOSING TUTORIAL PAGE */
@@ -403,6 +366,7 @@ main nav{
   position: relative;
   top: -4px;
   font-family: var(--InriaSans);
+  z-index: -1;
 }
 
 main nav ul{
