--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -415,6 +415,20 @@ main article p{
   font-size: 1.7em;
 }
 
+/* 
+    Tutorial Page 
+*/
+.dark-box{
+  padding: 1vh 3vw;
+  background-color: rgb(0, 0, 0, 0.75);
+  border-radius: 10px;
+}
+
+main a{
+  color: #fff;
+  font-size: 1.5em;
+}
+
 /* FOOTER */
 footer{
   /* position: relative;
