--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -37,10 +37,13 @@ h1 {
 body {
   margin: 0;
   padding: 0;
+  
+  /*Here ,I set the background  and image, and darken the background image  */
+}
+body,.background{
   background: rgba(0, 0, 0, 0.7) url(../images/backgroundaboutpage.jpg);
   background-size: cover;
   background-blend-mode: darken;
-  /*Here ,I set the background  and image, and darken the background image  */
 }
 
 /* Image container styling */
