--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,6 +24,19 @@ header {
   text-align: center;
   /* I basically align the content in the header */
 }
+#headerimage{
+  /* font-family: ; */
+  /* font-size: 2vh;
+  color: #fff;
+  margin: 0 auto;
+  font-family: var(--PriceDow); */
+  margin: 0 auto;
+  top: 0;
+  left: 0;
+  max-width: 50vw;
+  margin-top: 1vw;
+  margin-right: 7vw;
+}
 
 h1 {
   margin: 0;
