--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -158,7 +158,7 @@ main.flex{
 }
 
 .box {
-  height: 45vh;
+  height: 50vh;
   width: 20vw;
   background-color: rgb(0, 0, 0, 0.75);
   border: 1px solid #000000;
@@ -166,4 +166,16 @@ main.flex{
   margin: 5vh 1vw;
 }
 
+.gamepic {
+  height: 40vh;
+  width: 18vw;
+  margin: 1vh 1vw;
+}
 
+.gamename {
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  margin: 2vh;
+  font-family: var(--Inriasans);
+}
