--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -55,6 +55,8 @@ body{
   background: url("../images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  z-index: -2;
 }
 
 .bg-index{
@@ -76,11 +78,6 @@ body{
 .darken{
   background-color: rgba(0, 0, 0, 0.25);
   z-index: -1;
-}
-
-/* This code is so the body starts under the header and next to the sidebar */
-.body{
-  margin: 18vh 0 0 15vw;
 }
 
 /* HEADER */
