--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -396,7 +396,7 @@ main img.hero{
 }
 
 /* Navigation underneath the hero */
-main nav{
+main>nav{
   width: 100%;
   background-color: black;
   position: relative;
@@ -404,7 +404,7 @@ main nav{
   font-family: var(--InriaSans);
 }
 
-main nav ul{
+main>nav ul{
   margin: 0;
   padding: 0;
 }
@@ -413,7 +413,7 @@ main nav ul li{
   padding: 1vh 3vw;
 }
 
-main nav ul li a{
+main>nav ul li a{
   color: white;
   padding: 1vh 3vw;
 }
@@ -457,6 +457,8 @@ main article.tutorial p{
   padding: 1vh 3vw;
   background-color: rgb(0, 0, 0, 0.75);
   border-radius: 10px;
+  position: relative;
+  top: -15px;
 }
 
 .orange-box{
@@ -468,11 +470,54 @@ main article.tutorial p{
 main section.tutorial{
   justify-content: space-between;
   margin-right: 5vw;
+  margin-top: 15px;
 }
 
 main a{
   color: #fff;
   font-size: 1.5em;
+}
+
+main section.tutorial div div img{
+  width: 100px;
+}
+
+main section.tutorial div.flex div.flex{
+  color: white;
+  width: 100%;
+  align-items: center;
+  flex: 20%;
+}
+
+main section.tutorial div div.flex h6{
+  font-size: 1em;
+}
+
+main section.tutorial div.flex h2{
+  width: 100%;
+  font-size: 4rem;
+  text-align: center;
+  color: #F8941C;
+}
+
+main section.tutorial p{
+  color: white;
+  flex: 60%;
+}
+
+main section.tutorial iframe{
+  flex: 40%;
+}
+
+main section.tutorial nav{
+  width: 100%;
+  font-family: var(--InriaSans);
+  justify-content: space-between;
+  align-items: center;
+}
+
+main section.tutorial nav ul li{
+  border: white 1px solid;
 }
 
 /* FOOTER */
