--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,98 +1,153 @@
 /* Fonts */
 @font-face {
-    font-family: 'pricedow';
-    src: url("../fonts/pricedow.woff") format('woff'),
-    url('../fonts/pricedow.woff2') format('woff2');
+  font-family: 'pricedow';
+  src: url("../fonts/pricedow.woff") format('woff'),
+  url('../fonts/pricedow.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'InriaSans';
-  src: url("../fonts/InriaSans.woff") format('woff'),
-  url('../fonts/InriaSans.woff2') format('woff2');
+font-family: 'InriaSans';
+src: url("../fonts/InriaSans.woff") format('woff'),
+url('../fonts/InriaSans.woff2') format('woff2');
 }
+
+@font-face {
+  font-family: 'metalmania';
+  src: url("../fonts/metalmania-regular-webfont.woff") format('woff'),
+  url('../fonts/metalmania-regular-webfont.woff2') format('woff2');
+  }
 
 /* Root */
 :root{
-  --PriceDow: "pricedow";
-  --InriaSans: "InriaSans";
+--PriceDow: "pricedow";
+--InriaSans: "InriaSans";
+--metalmania: "metalmania";
 }
 
 /* general styling */
 *{
-  text-decoration: none;
-  list-style: none;
+text-decoration: none;
+list-style: none;
 }
 
 .flex{
-  display: flex;
+display: flex;
 }
 
 .margin-0{
-  margin: 0;
+margin: 0;
 }
 
 /*Giving the body the background picture*/
 body{
-  margin: 0;
-  padding: 0;
-  background-image: url('/public/images/background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+margin: 0;
+padding: 0;
+background-image: url('/public/images/background.jpg');
+background-repeat: no-repeat;
+background-size: cover;
 }
 
 /* This code is so the body starts under the header and next to the sidebar */
 .body{
-  margin: 18vh 0 0 15vw;
+margin: 18vh 0 0 15vw;
 }
 
 /* this is to have a background picture and darken it */
 .bg{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+position: fixed;
+top: 0;
+left: 0;
+width: 100vw;
+height: 100vh;
+}
+
+.bg-index{
+background: url('../images/background.jpg');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+z-index: -2;
 }
 
 .bg-GAME{
-  background: url("../images/bg-GAME.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  z-index: -2;
+background: url("../images/bg-GAME.jpg");
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+z-index: -2;
 }
 
 .darken{
-  background-color: rgba(0, 0, 0, 0.25);
-  z-index: -1;
+background-color: rgba(0, 0, 0, 0.25);
+z-index: -1;
 }
 
+/* HEADER */
+header{
+text-align: center;
+background: linear-gradient(#000 40%, rgb(0,0,0,0.0));
+top: 0;
+left: 0;
+max-width: 100vw;
+height: 18vh;
+}
+
+#headerimage{
+margin: 0 auto;
+top: 0;
+left: 0;
+max-width: 50vw;
+margin-top: 1vw;
+margin-right: 7vw;
+}
+
+#headerlogo{
+top: 0;
+left: 0;
+max-width: 6vw;
+float: left;
+margin-left: 20px;
+
+}
+
+.buttonlogo{
+background-color: #00000000;
+opacity: 10;
+}
+
+#headerlogo1{
+margin-left: 0;
+top: 0;
+left: 0;
+max-width: 6vw;
+width: 100%;
+}
 
 /*Styling the sidebar*/
 aside{
-  width: 16vw;
-  height: 100vh;
-  background-color: #000000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  padding: 13vh 1vw;
-  color: white;
-  font-size: 24px;
-  font-family: var(--Inriasans);
-  line-height: 5vh;
-  background: linear-gradient(to right, rgba(0, 0, 0) 65%, rgb(0, 0, 0, 0.0));
+width: 16vw;
+height: 100vh;
+background-color: #000000;
+position: fixed;
+top: 0;
+left: 0;
+padding: 13vh 1vw;
+color: white;
+font-size: 24px;
+font-family: var(--Inriasans);
+line-height: 5vh;
+background: linear-gradient(to right, rgba(0, 0, 0) 65%, rgb(0, 0, 0, 0.0));
 }
 
 /*Moving the list to the left*/
 aside>ul{
-  padding: 0;
+padding: 0;
 }
 
 /*Making the colour of the text About Us white*/
 aside a{
-  color: white;
-  padding-right: 7vw;
+color: white;
+padding-right: 7vw;
 }
 
 /* removing the padding for bigger words */
@@ -102,412 +157,316 @@ padding-right: 0;
 
 /* making the selcted page orange */
 aside ul li.selected{
-  padding-right: 5vw;
-  background: linear-gradient(to right, rgb(248, 148, 28) 65%, rgb(0, 0, 0, 0.0));
+padding-right: 5vw;
+background: linear-gradient(to right, rgb(248, 148, 28) 65%, rgb(0, 0, 0, 0.0));
 }
 
 /*Styling the About Us link*/
 aside>a{
-  position: absolute;
-  top: 85vh;
-  left: 1vw;
-  font-size: 40px;
-  font-family: var(--PriceDow);
+position: absolute;
+top: 85vh;
+left: 1vw;
+font-size: 40px;
+font-family: var(--PriceDow);
 }
 
 /* Styling for hovered link */
 aside a:hover {
-  background-color: #F8941C; 
-  color: #ffffff; 
-  background: linear-gradient(to right, rgb(248, 148, 28) 65%, rgb(0, 0, 0, 0.0));
+background-color: #F8941C; 
+color: #ffffff; 
+background: linear-gradient(to right, rgb(248, 148, 28) 65%, rgb(0, 0, 0, 0.0));
 }
 
 /*Styling the Search Bar*/
 .search-form {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 16vh 0vw;
+display: flex;
+align-items: center;
+justify-content: flex-end;
+padding: 16vh 0vw;
 }
 
 /*White square text-input styling*/
 .search-form input[type="text"] {
-  padding: 0.5vw;
-  font-size: 16px;
-  border: 0.1vw solid #ccc;
-  border-radius: 0;
+padding: 0.5vw;
+font-size: 16px;
+border: 0.1vw solid #ccc;
+border-radius: 0;
 }
 
 /*Orange square submit button designing*/
 .search-form button {
-  padding: 2.5vh 2vw;
-  background-color: #f8941c;
-  color: #fff;
-  border: none;
-  border-radius: 0;
-  cursor: pointer;
+padding: 2.5vh 2vw;
+background-color: #f8941c;
+color: #fff;
+border: none;
+border-radius: 0;
+cursor: pointer;
 }
 
-/* Main body */
-main img.hero{
-  width: 100%;
-}
-
-/* Navigation underneath the hero */
-main nav{
-  width: 100%;
-  background-color: black;
-  position: relative;
-  top: -4px;
-  font-family: var(--InriaSans);
-}
-
-main nav ul{
-  margin: 0;
-  padding: 0;
-}
-
-main nav ul li{
-  padding: 1vh 3vw;
-}
-
-main nav ul li a{
-  color: white;
-  padding: 1vh 3vw;
-}
-
-nav ul li.selected{
-  background-color: orange;
-}
-
-/* Tutorials */
-main article{
-  width: 90%;
-  margin: 3vh auto;
-  padding: 10px;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.75);
-  border-radius: 10px;
-}
-
-main article img{
-  width: 200px;
-  padding-right: 1vw;
-}
-
-main article h2{
-  font-size: 2rem
-}
-
-main article h6{
-  font-size: 1rem
-}
-
-main article p{
-  margin: 10px 0 0 0 ;
-  font-size: 1.7em;
-}
-
-.flex{
-  display: flex;
-}
-
-.bg{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-}
-
-.bg-index{
-  background: url('../images/background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  z-index: -2;
-}
-
-.darken{
-  background-color: rgb(0, 0, 0, 0.25);
-  z-index: -1;
-}
-
-
-
-header{
-  text-align: center;
-  background: linear-gradient(#000 40%, rgb(0,0,0,0.0));
-  top: 0;
-  left: 0;
-  max-width: 100vw;
-  height: 18vh;
-}
-
-#headerimage{
-  /* font-family: ; */
-  /* font-size: 2vh;
-  color: #fff;
-  margin: 0 auto;
-  font-family: var(--PriceDow); */
-  margin: 0 auto;
-  top: 0;
-  left: 0;
-  max-width: 50vw;
-  margin-top: 1vw;
-  margin-right: 7vw;
-}
-
-#headerlogo{
-  margin-left: 0;
-  top: 0;
-  left: 0;
-  max-width: 6vw;
-  float: left;
-  margin-left: 20px;
-  
-}
-
-.buttonlogo{
-  background-color: #00000000;
-  opacity: 10;
-}
-
-#headerlogo1{
-  margin-left: 0;
-  top: 0;
-  left: 0;
-  max-width: 6vw;
-  width: 100%;
-  /* float: left;
-  margin-left: 20px; */
-  
-}
-
-
-
-
-
+/* MAIN BODY INDEX PAGE */
 /* this is for search bar */
 .searchwrap{
-  margin-top: -5vh;
-  max-width: 100vw; 
+margin-top: -5vh;
+max-width: 100vw; 
 }
 
 .search{
-  display: flex;
-  width: 40%;
-  margin: 0 auto;
-  /* position: relative; */
+display: flex;
+width: 40%;
+margin: 0 auto;
+/* position: relative; */
 }
 
 .searchterm{
-  width: 100%;
-  border: 3px solid #000000;
-  border-right: none;
-  padding: 5px;
-  height: 20px;
-  outline: none;
-  color: #000000;
+width: 100%;
+border: 3px solid #000000;
+border-right: none;
+padding: 5px;
+height: 20px;
+outline: none;
+color: #000000;
 }
 
 .searchterm:focus{
-  color: #000000;
+color: #000000;
 }
 
 .searchbutton{
-  width: 80px;
-  height: 36px;
-  border: 1px solid #000000;
-  background: #F8941C;
-  text-align: center;
-  color: #fff;
-  cursor: pointer;
-  font-size: 20px;
+width: 80px;
+height: 36px;
+border: 1px solid #000000;
+background: #F8941C;
+text-align: center;
+color: #fff;
+cursor: pointer;
+font-size: 20px;
 }
 
 /* this is for box welcoming user */
 
 .boxarticle{
-    margin: 0 auto;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    /* background-color: #2e2d2dbf; */
-    background: rgba(0, 0, 0, 0.5);
-    border: 1px solid black;
-    padding: 5vh;
-    width: 40vw;
-    border-radius: 20px;
-  
+  margin: 0 auto;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  /* background-color: #2e2d2dbf; */
+  background: rgba(0, 0, 0, 0.5);
+  border: 1px solid black;
+  padding: 5vh;
+  width: 40vw;
+  border-radius: 20px;
+
 }
 
 #welcometoptext{
-  font-size: 40px;
-  text-align: center;
-  margin-top: -20px;
-  color: #FFA500;
+font-size: 40px;
+font-family: var(--InriaSans);
+text-align: center;
+margin-top: -20px;
+color: #FFA500;
 }
 
 #welcomemiddletext{
-  font-size: 20px;
-  text-align: center;
-  margin-top: -10px;
-  color: #FFA500;
+font-size: 20px;
+font-family: var(--InriaSans);
+text-align: center;
+margin-top: -10px;
+color: #FFA500;
 }
 
 #welcomebottomtext{
- font-size: 20px;
- text-align: center;
- color: #FFA500;
+font-size: 20px;
+font-family: var(--InriaSans);
+text-align: center;
+color: #FFA500;
 }
 
 
 /* this is for index page */
 .grid{
-  display: grid;
-  grid-template-columns: repeat(10,1fr);
-  grid-template-rows: repeat(4,minmax(150px,auto));
+display: grid;
+grid-template-columns: repeat(10,1fr);
+grid-template-rows: repeat(4,minmax(150px,auto));
 }
 
 .textingrid{
-  text-align: center;
+text-align: center;
+font-family: var(--metalmania);
+font-size: 45px;
+-webkit-text-stroke: 1px black;
+margin-top: 1vh;
 }
+
 
 #mostpopulargrid{
-  grid-column: 2/4;
-  grid-row: 1/2;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
-
+grid-column: 2/4;
+grid-row: 1/2;
+border: 10px solid black;
+background: url("../images/popular2.png");
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
 }
 
+
 #fpsgrid{
-  grid-column: 5/7;
-  grid-row: 1/2;
-  background-color: #1d1c1c6e;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 5/7;
+grid-row: 1/2;
 }
 
 #rpggrid{
-  grid-column: 8/10;
-  grid-row: 1/2;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 8/10;
+grid-row: 1/2;
 }
 
 #sportgrid{
-  grid-column: 2/4;
-  grid-row: 2/3;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 2/4;
+grid-row: 2/3;
 }
 
 #platformergrid{
-  grid-column: 5/7;
-  grid-row: 2/3;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 5/7;
+grid-row: 2/3;
 }
 
 #horrorgrid{
-  grid-column: 8/10;
-  grid-row: 2/3;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 8/10;
+grid-row: 2/3;
 }
 
 #racinggrid{
-  grid-column: 2/4;
-  grid-row: 3/4;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 2/4;
+grid-row: 3/4;
 }
 
 #adventuregrid{
-  grid-column: 5/7;
-  grid-row: 3/4;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 5/7;
+grid-row: 3/4;
 }
 
 #fightinggrid{
-  grid-column: 8/10;
-  grid-row: 3/4;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 8/10;
+grid-row: 3/4;
 }
 
 #puzzlegrid{
-  grid-column: 2/4;
-  grid-row: 4/5;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 2/4;
+grid-row: 4/5;
 }
 
 #strategygrid{
-  grid-column: 5/7;
-  grid-row: 4/5;
-  background-color: #e56262;
-  padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 5/7;
+grid-row: 4/5;
 }
 
 #actiongrid{
-  grid-column: 8/10;
-  grid-row: 4/5;
-  background-color: #e56262;padding: 20px;
-  margin-bottom: 40px;
-  border-radius: 20px;
+grid-column: 8/10;
+grid-row: 4/5;
 }
 
 
+section.grid a{
+  background-color: #e56262;
+  padding: 10px;
+  margin-bottom: 40px;
+  border-radius: 25px;
+  color: #fff;
+  height: 9vh;
+  width: 18vw;
+  border: 10px solid black;
+}
 
+section.grid a:hover{
+  background-color: #ffffff;
+}
+
+/* MAIN BODY SITEMAP PAGE */
+
+/* #sitemapheader{
+
+} */
+
+
+
+/* MAIN BODY CHOOSING TUTORIAL PAGE */
+main img.hero{
+width: 100%;
+}
+
+/* Navigation underneath the hero */
+main nav{
+width: 100%;
+background-color: black;
+position: relative;
+top: -4px;
+font-family: var(--InriaSans);
+}
+
+main nav ul{
+margin: 0;
+padding: 0;
+}
+
+main nav ul li{
+padding: 1vh 3vw;
+}
+
+main nav ul li a{
+color: white;
+padding: 1vh 3vw;
+}
+
+nav ul li.selected{
+background-color: orange;
+}
+
+/* Tutorials */
+main article{
+width: 90%;
+margin: 3vh auto;
+padding: 10px;
+color: white;
+background-color: rgba(0, 0, 0, 0.75);
+border-radius: 10px;
+}
+
+main article img{
+width: 200px;
+padding-right: 1vw;
+}
+
+main article h2{
+font-size: 2rem
+}
+
+main article h6{
+font-size: 1rem
+}
+
+main article p{
+margin: 10px 0 0 0 ;
+font-size: 1.7em;
+}
+
+/* FOOTER */
 footer{
-  /* position: relative;
-  top: 0px; */
-  justify-content: space-between;
-  align-items: center;
-  background: #000;
-  max-width: 100vw;
-  height: 10vh;
+/* position: relative;
+top: 0px; */
+justify-content: space-between;
+align-items: center;
+background: #000;
+max-width: 100vw;
+height: 10vh;
 }
 
 footer a{
-  position: relative;
-  top: -5px;
+position: relative;
+top: -5px;
 }
 
 footer a img{
-  position: relative;
-  top: 7px;
-  height: 8vh;
-  padding: 1vh;
-  background-color: #FFA500;
+position: relative;
+top: 7px;
+height: 8vh;
+padding: 1vh;
+background-color: #FFA500;
 }
-
-
-
-
-
-
