--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -86,8 +86,8 @@ body{
   z-index: -2;
 }
 
-.bg-GAME{
-  background: url("../images/bg-GAME.jpg");
+.bg-csgo{
+  background: url("../images/bg-csgo.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
