--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -94,6 +94,14 @@ body{
   z-index: -2;
 }
 
+.bg-gta{
+  background: url("../images/bg-gta.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  z-index: -2;
+}
+
 .darken{
   background-color: rgba(0, 0, 0, 0.25);
   z-index: -1;
