--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -102,6 +102,14 @@ body{
   z-index: -2;
 }
 
+.bg-overwatch2{
+  background: url("../images/bg-overwatch2.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  z-index: -2;
+}
+
 .darken{
   background-color: rgba(0, 0, 0, 0.25);
   z-index: -1;
@@ -593,7 +601,7 @@ main article.tutorial h6{
 
 main article.tutorial p{
   margin: 10px 0 0 0 ;
-  font-size: 1.7em;
+  font-size: 1.3em;
 }
 
 /* 
