--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -620,6 +620,11 @@ nav ul li.selected{
   width: 800px; 
   margin-bottom: 20px;/*this is to create space under the image so that it wont be to close to the text above it*/
 }
+.subsection iframe{
+  height: 300px;
+  width: 500px;
+  flex: auto !important;
+}
 
 
 /* Tutorials */
