--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -492,9 +492,127 @@ body,.background{
 
 /* MAIN BODY SITEMAP PAGE */
 
-/* #sitemapheader{
+.gridsitemap{
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+  grid-template-rows: repeat(24,minmax(150px,auto));
+  }
 
-} */
+#sitemapheader{
+  margin-top: 18vh;
+  margin-left: 15vw;
+}
+
+#sitemapheadertext{
+  font-size: 40px;
+  color: #fff;
+}
+
+main section .grid a,h2,ul,li{
+  color: white;
+}
+
+#homepagesitemap{
+  grid-column: 2/4;
+  grid-row: 1/4;
+}
+
+#popularsitemap{
+  grid-column: 4/6;
+  grid-row: 1/4;
+}
+
+#fpssitemap{
+  grid-column: 6/8;
+  grid-row: 1/4;
+}
+
+#rpgsitemap{
+  grid-column: 8/10;
+  grid-row: 1/4;
+}
+
+#sportsitemap{
+  grid-column: 10/12;
+  grid-row: 1/4;
+}
+
+#platformersitemap{
+  grid-column: 4/6;
+  grid-row: 4/8;
+}
+
+#horrorsitemap{
+  grid-column: 6/8;
+  grid-row: 4/8;
+}
+
+#racingsitemap{
+  grid-column: 8/10;
+  grid-row: 4/8;
+}
+
+#adventuresitemap{
+  grid-column: 10/12;
+  grid-row: 4/8;
+}
+
+#fightingsitemap{
+  grid-column: 4/6;
+  grid-row: 8/12;
+}
+
+#puzzlesitemap{
+  grid-column: 6/8;
+  grid-row: 8/12;
+}
+
+#strategysitemap{
+  grid-column: 8/10;
+  grid-row: 8/12;
+}
+
+#actionsitemap{
+  grid-column: 10/12;
+  grid-row: 8/12;
+}
+
+#aboutsitemap{
+  grid-column: 4/6;
+  grid-row: 12/16;
+}
+
+#gtasitemap{
+  grid-column: 6/8;
+  grid-row: 12/16;
+}
+
+#csgositemap{
+  grid-column: 8/12;
+  grid-row: 12/16;
+}
+
+#hollowsitemap{
+  grid-column: 4/6;
+  grid-row: 16/20;
+}
+
+#fifasitemap{
+  grid-column: 6/8;
+  grid-row: 16/20;
+}
+
+#minecraftsitemap{
+  grid-column: 8/10;
+  grid-row: 16/20;
+}
+
+#overwatchsitemap{
+  grid-column: 6/8;
+  grid-row: 20/24;
+}
+
+
 
 
 /* GENRE PAGES */
@@ -533,6 +651,13 @@ main img.hero{
   width: 100%;
 }
 
+main img.hero2{
+  height: 450px;
+  width: 100%;
+  /* object-fit: cover; */
+  object-fit: cover;
+}
+
 /* Navigation underneath the hero */
 main>nav{
   width: 100%;
@@ -548,12 +673,17 @@ main>nav ul{
 }
 
 main nav ul li{
-  padding: 1vh 3vw;
+  padding: 1vh 2vw;
 }
 
 main>nav ul li a{
   color: white;
   padding: 1vh 3vw;
+}
+
+.gtatexta{
+  padding: 1vh 2.5vw;
+  color: white;
 }
 
 nav ul li.selected{
@@ -585,7 +715,7 @@ main article.tutorial h6{
 
 main article.tutorial p{
   margin: 10px 0 0 0 ;
-  font-size: 1.7em;
+  font-size: 1.3em;
 }
 
 /* 
@@ -656,6 +786,157 @@ main section.tutorial nav{
 
 main section.tutorial nav ul li{
   border: white 1px solid;
+}
+
+.warningtext{
+  margin: 0 auto;
+  position: absolute;
+  margin-top: 7vh;
+  margin-left: 5vw;
+  background-color: #F8941C;
+  padding: 10px;
+  border: 5px solid rgb(0, 0, 0);
+}
+
+.warningtextcheat{
+  margin: 0 auto;
+  position: absolute;
+  margin-top: 7vh;
+  background-color: #F8941C;
+  padding: 10px;
+  border: 5px solid rgb(0, 0, 0);
+}
+
+.cheattextabove{
+  margin: 0 auto;
+  position: absolute;
+  margin-top: 18vh;
+  background-color: #F8941C;
+  padding: 10px;
+  border: 5px solid rgb(0, 0, 0);
+}
+
+.codetextabove{
+  margin: 0 auto;
+  position: absolute;
+  margin-top: 18vh;
+  margin-left: 22vw;
+  background-color: #F8941C;
+  padding: 10px;
+  border: 5px solid rgb(0, 0, 0);
+}
+
+.cheattextbelow{
+  margin: 0 auto;
+  position: absolute;
+  margin-top: 24vh;
+}
+
+.codetextbelow{
+  margin: 0 auto;
+  position:absolute;
+  margin-top: 24vh;
+  margin-left: 22vw;
+}
+
+/* gta tutorial easteregg section for the ufo  */
+.ufotext{
+  grid-column: 1/5;
+  grid-row: 1/2;
+}
+
+.ufotext2{
+  grid-column: 1/5;
+  grid-row: 2/3;
+}
+
+.ufovid{
+  grid-column: 6/8;
+  grid-row: 1/2;
+  margin-bottom: 1vh;
+  margin-top: 1vh;
+}
+
+.ufovid2{
+  grid-column: 6/8;
+  grid-row: 2/4;
+}
+
+/* gta tutorial character section  */
+
+.gridbio{
+  display: grid;
+  grid-template-columns: repeat(10,1fr);
+  grid-template-rows: repeat(10,minmax(150px,auto));
+  }
+
+.gtabiopic{
+  width: 250px;
+  height: 300px;
+  border: 5px solid #F8941C;
+  margin-top: 7vh;
+}
+
+.biotable table,th,td {
+  color: #fff;
+  border: 1px solid #ffffff;
+}
+
+.biotable th {
+  width: 10vw;
+  height: 5vh;
+}
+
+.biotext {
+  grid-column: 1/7;
+  grid-row: 1/5;
+}
+
+.biotext h2 {
+  text-align: center;
+  font-size: 2em;
+  margin-top: -0.5vh;
+}
+
+.franklinpic {
+  grid-column: 8/10;
+  grid-row: 1/3;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+.biobackground {
+  grid-column: 2/10;
+  grid-row: 5/10;
+}
+
+.biobackground h2{
+  text-align: center;
+  font-size: 2em;
+}
+
+.biobackground p {
+  font-size: 1.5em;
+}
+
+.biosource {
+  grid-column: 6/11;
+  grid-row: 10;
+}
+
+.biosource h2{
+  text-align: right;
+}
+
+.biosource a{
+  color: #F8941C;
+  font-size: 1em;
+  margin-left: 11vw;
+}
+
+.linkintutorials{
+  font-size: 1em;
+  color: #F8941C;
 }
 
 /* FOOTER */
